# sumbox

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: .bash_aliases  .env  Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env  Cargo.toml  Makefile.toml
backend/prisma/: schema.prisma
backend/src/: config.rs  db.rs  main.rs
backend/src/api/: authenticate.rs  ideas.rs  mod.rs
backend/src/types/: account.rs  claim.rs  comment.rs  confirmation.rs  mod.rs  profile.rs  user.rs  vote.rs  weberror.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: package-lock.json  package.json
