[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
axum = "0.5.16"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
log = "0.4.17"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum-extra = {version="0.3.7", features=["cookie"]}
clap = { version = "4.0.17", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["full"] }
jsonwebtoken = "8.1.1"
