[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
axum = { version = "0.5.16", features = ["headers"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2", features=["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2", features=["postgresql"] }
log = "0.4.17"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = {version="0.3.7", features=["cookie"]}
clap = { version = "4.0.17", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["full"] }
jsonwebtoken = "8.1.1"
common = { version = "0.1.0", path = "../common" }
base64 = "0.13"
anyhow = "1.0.66"
secrecy = "0.8.0"
thiserror = "1.0.37"